# claranet4

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  claranet4.spec  pyproject.toml
.github/workflows/: release.yml  test.yml
src/claranet4/: __init__.py  cli.py  lib.py
tests/: test_claranet4.py
xbar/: claranet4.2m.sh
