[build-system]
requires = [
    "setuptools >= 64",
    "wheel >= 0.37.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "claranet4"
description = "Barebones Bleak-based client for the Aranet4 sensor"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aranet4"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "bleak ~= 1.1",
    "defopt ~= 7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "build",
    "pre-commit",
    "pyinstaller",
]

[project.scripts]
claranet4 = "claranet4.cli:main"

[tool.setuptools.dynamic]
version = {attr = "claranet4.__version__"}

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "build",
    "pre-commit",
    "pyinstaller",
]
